Se añade imagen de logo y se cambian secciones de contenido

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/portadaScriptly.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -76,7 +76,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Get Started</a>
+      <a class="btn-getstarted" href="index.html#about">Cotiza aquí</a>
 
     </div>
   </header>
@@ -93,26 +93,21 @@
             <div class="hero-content" data-aos="fade-up" data-aos-delay="200">
               <div class="company-badge mb-4">
                 <i class="bi bi-gear-fill me-2"></i>
-                Working for your success
+                🚀 ¡Impulsa tu negocio con una landing page profesional!                  
               </div>
 
               <h1 class="mb-4">
-                Maecenas Vitae <br>
-                Consectetur Led <br>
-                <span class="accent-text">Vestibulum Ante</span>
+                SCRIPTLY
+                    <br>                
               </h1>
 
               <p class="mb-4 mb-md-5">
-                Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
-                Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
+                Creamos páginas que convierten visitantes en clientes, hechas a medida para ti.
               </p>
 
               <div class="hero-buttons">
-                <a href="#about" class="btn btn-primary me-0 me-sm-2 mx-1">Get Started</a>
-                <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="btn btn-link mt-2 mt-sm-0 glightbox">
-                  <i class="bi bi-play-circle me-1"></i>
-                  Play Video
-                </a>
+                <a href="#about" class="btn btn-primary me-0 me-sm-2 mx-1">Cotiza aquí</a>
+                <a href="https://api.whatsapp.com/send/?phone=%2B593987605705&text=Hola%2C+me+gustar%C3%ADa+obtener+una+ cotización&type=phone_number&app_absent=0" class="btn btn-success me-0 me-sm-2 mx-1"><i class="bi bi-whatsapp" style="color: yellow; margin-right: 10px;"></i>Contactanos</a>                
               </div>
             </div>
           </div>
@@ -130,58 +125,11 @@
                   <img src="assets/img/avatar-5.webp" alt="Customer 5" class="avatar">
                   <span class="avatar more">12+</span>
                 </div>
-                <p class="mb-0 mt-2">12,000+ lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+                <p class="mb-0 mt-2">+500 Clientes satisfechos</p>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="row stats-row gy-4 mt-5" data-aos="fade-up" data-aos-delay="500">
-          <div class="col-lg-3 col-md-6">
-            <div class="stat-item">
-              <div class="stat-icon">
-                <i class="bi bi-trophy"></i>
-              </div>
-              <div class="stat-content">
-                <h4>3x Won Awards</h4>
-                <p class="mb-0">Vestibulum ante ipsum</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="stat-item">
-              <div class="stat-icon">
-                <i class="bi bi-briefcase"></i>
-              </div>
-              <div class="stat-content">
-                <h4>6.5k Faucibus</h4>
-                <p class="mb-0">Nullam quis ante</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="stat-item">
-              <div class="stat-icon">
-                <i class="bi bi-graph-up"></i>
-              </div>
-              <div class="stat-content">
-                <h4>80k Mauris</h4>
-                <p class="mb-0">Etiam sit amet orci</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="stat-item">
-              <div class="stat-icon">
-                <i class="bi bi-award"></i>
-              </div>
-              <div class="stat-content">
-                <h4>6x Phasellus</h4>
-                <p class="mb-0">Vestibulum ante ipsum</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        </div>        
 
       </div>
 
@@ -195,23 +143,27 @@
         <div class="row gy-4 align-items-center justify-content-between">
 
           <div class="col-xl-5" data-aos="fade-up" data-aos-delay="200">
-            <span class="about-meta">MORE ABOUT US</span>
-            <h2 class="about-title">Voluptas enim suscipit temporibus</h2>
-            <p class="about-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-
+            <span class="about-meta">Más sobre nosotros</span>
+            <h2 class="about-title">Scriply cambiando tu mundo</h2>
+            <p class="about-description">Nuestro proyecto se concentra en ayudar a distintas empresas a tener presencia en internet ofreciendo precios accesibles a distintos emprendimientos.</p>
+            <p class="about-description">Contamos también con distintos planes acorde a la necesidad y al público objetivo</p>
             <div class="row feature-list-wrapper">
               <div class="col-md-6">
                 <ul class="feature-list">
-                  <li><i class="bi bi-check-circle-fill"></i> Lorem ipsum dolor sit amet</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Consectetur adipiscing elit</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Sed do eiusmod tempor</li>
+                  <li><i class="bi bi-check-circle-fill"></i>Diseño moderno y adaptable a móviles
+                  </li>
+                  <li><i class="bi bi-check-circle-fill"></i>Entregas rápidas y personalizadas
+                  </li>
+                  <li><i class="bi bi-check-circle-fill"></i>Optimización para conversiones
+                  </li>                  
                 </ul>
               </div>
               <div class="col-md-6">
                 <ul class="feature-list">
-                  <li><i class="bi bi-check-circle-fill"></i> Incididunt ut labore et</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Dolore magna aliqua</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Ut enim ad minim veniam</li>
+                  <li><i class="bi bi-check-circle-fill"></i>Soporte técnico incluido
+                  </li>
+                  <li><i class="bi bi-check-circle-fill"></i>Precio justo y accesible
+                  </li>                  
                 </ul>
               </div>
             </div>
@@ -222,7 +174,7 @@
                   <div class="profile d-flex align-items-center gap-3">
                     <img src="assets/img/avatar-1.webp" alt="CEO Profile" class="profile-image">
                     <div>
-                      <h4 class="profile-name">Mario Smith</h4>
+                      <h4 class="profile-name">Tommy Burgos</h4>
                       <p class="profile-position">CEO &amp; Founder</p>
                     </div>
                   </div>
@@ -231,8 +183,8 @@
                   <div class="contact-info d-flex align-items-center gap-2">
                     <i class="bi bi-telephone-fill"></i>
                     <div>
-                      <p class="contact-label">Call us anytime</p>
-                      <p class="contact-number">+123 456-789</p>
+                      <p class="contact-label">No dudes en contactarme</p>
+                      <p class="contact-number">+593987605705</p>
                     </div>
                   </div>
                 </div>
@@ -247,8 +199,8 @@
                 <img src="assets/img/about-2.webp" alt="Team Discussion" class="img-fluid small-image rounded-4">
               </div>
               <div class="experience-badge floating">
-                <h3>15+ <span>Years</span></h3>
-                <p>Of experience in business service</p>
+                <h3>+5<span>Años</span></h3>
+                <p>De experiencia brindando un buen servicio</p>
               </div>
             </div>
           </div>
